fixed header image alignment & scaling for mobile widths

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,11 @@
 /* Header & Footer
 -----------------------------------*/
 .header {
-padding: 10rem 0 10rem;
+padding: 1rem 0 5rem;
 }
-.footer {
-padding: 10rem 0 10rem;
+.header-image {
+  width: 20%;
+  height: auto;
 }
 /* Sections
 -----------------------------------*/
@@ -20,3 +21,25 @@ padding: 10rem 0 10rem;
   color: white;
 
 }
+/* Image Alignment
+-----------------------------------*/
+.center {
+  float: center;
+}
+
+/* Mobile first queries */
+
+/* Larger than mobile */
+@media (min-width: 400px) {}
+
+/* Larger than phablet */
+@media (min-width: 550px) {}
+
+/* Larger than tablet */
+@media (min-width: 750px) {}
+
+/* Larger than desktop */
+@media (min-width: 1000px) {}
+
+/* Larger than Desktop HD */
+@media (min-width: 1200px) {}
